Closed
Bug 1392976
Opened 8 years ago
Closed 8 years ago
Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime()
Categories
(Core :: Audio/Video: GMP, defect, P1)
Core
Audio/Video: GMP
Tracking
()
RESOLVED
FIXED
mozilla57
People
(Reporter: JamesCheng, Assigned: JamesCheng)
References
Details
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
cpearce
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
I think it's thread safe to call the time function.
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Updated•8 years ago
|
Rank: 15
Priority: -- → P1
Comment 3•8 years ago
|
||
mozreview-review |
Comment on attachment 8900175 [details]
Bug 1392976 - Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime().
https://reviewboard.mozilla.org/r/171562/#review176726
Attachment #8900175 -
Flags: review?(cpearce) → review+
Pushed by jacheng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0439eecf0b50
Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime(). r=cpearce
Assignee | ||
Comment 5•8 years ago
|
||
Comment on attachment 8900175 [details]
Bug 1392976 - Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime().
Approval Request Comment
[Feature/Bug causing the regression]:NO
[User impact if declined]: user could not play DRM content. When we update new CDM.
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]:
Please follow this order for uplifting
1. Bug 1390453
2. Bug 1390739
3. Bug 1390725
4. Bug 1392175
5. This bug
[Is the change risky?]:No
[Why is the change risky/not risky?]:The change did not effect on the current CDM.
[String changes made/needed]: No
Attachment #8900175 -
Flags: approval-mozilla-beta?
![]() |
||
Comment 6•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Updated•8 years ago
|
status-firefox56:
--- → affected
Comment 7•8 years ago
|
||
Comment on attachment 8900175 [details]
Bug 1392976 - Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime().
5th patch (to uplift in order) for CDM update on beta.
Attachment #8900175 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•8 years ago
|
||
bugherder uplift |
Comment 9•8 years ago
|
||
(In reply to James Cheng[:JamesCheng] from comment #5)
> [Is this code covered by automated tests?]: No
> [Has the fix been verified in Nightly?]: Yes
> [Needs manual test from QE? If yes, steps to reproduce]: No
Setting qe-verify- based on James's assessment on manual testing needs.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•