Bug 1392976 - Do not assert IsOnMessageLoopThread() in ChromiumCDMChild::GetCurrentWallTime(). r=cpearce, a=lizzard

MozReview-Commit-ID: Je4uTzFtLih

--HG--
extra : source : 0439eecf0b503805386fd4d39dde351f1a4f174c